force-app/main/default/objects/CSA_Inquiries__c/fields/Receiving_District__c.field-meta.xml
<CustomField>
    <fullName>Receiving_District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiving District #</label>
    <referenceTo>Organization_Structure__c</referenceTo>
    <relationshipLabel>CSA Inquiries (Receiving District)</relationshipLabel>
    <relationshipName>CSA_Inquiries3</relationshipName>
    <type>Lookup</type>
</CustomField>