force-app/main/default/objects/CSA_Inquiries__c/fields/Receiving_DSM_del__c.field-meta.xml
<CustomField>
    <fullName>Receiving_DSM_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiving DSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CSA_Inquiries1</relationshipName>
    <type>Lookup</type>
</CustomField>