force-app/main/default/objects/CSA_Inquiries__c/fields/Receiving_Rep_del__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Rep_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiving Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CSA_Inquiries</relationshipName>
    <type>Lookup</type>
</CustomField>