force-app/main/default/objects/CSA_Inquiries__c/fields/RECOGNITION_TYPE__c.field-meta.xml
<CustomField>
    <fullName>RECOGNITION_TYPE__c</fullName>
    <label>Recognition Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CIRCLE</fullName>
            </value>
            <value>
                <fullName>CONFERENCE</fullName>
            </value>
            <value>
                <fullName>DIAMOND CLUB</fullName>
            </value>
            <value>
                <fullName>ICE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>