force-app/main/default/objects/CSA_Inquiries__c/fields/Referral_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Referral_Bank_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring Parter/Bank Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must use a Referring Partner with a Vendor Id</errorMessage>
        <filterItems>
            <field>Referral_Account__c.PartnerId__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Referral_Account__c</referenceTo>
    <relationshipLabel>CSA Inquiries</relationshipLabel>
    <relationshipName>CSA_Inquiries</relationshipName>
    <type>Lookup</type>
</CustomField>