force-app/main/default/objects/CSA_Inquiries__c/fields/Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>Referral_Type__c</fullName>
    <label>Referral Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CORE</fullName>
            </value>
            <value>
                <fullName>MMS</fullName>
            </value>
            <value>
                <fullName>PREMIER</fullName>
            </value>
            <value>
                <fullName>401K</fullName>
            </value>
            <value>
                <fullName>PBS</fullName>
            </value>
            <value>
                <fullName>HANDBOOKS</fullName>
            </value>
            <value>
                <fullName>HIAS</fullName>
            </value>
            <value>
                <fullName>MMS PREMIER</fullName>
            </value>
            <value>
                <fullName>TCS</fullName>
            </value>
            <value>
                <fullName>TLO</fullName>
            </value>
            <value>
                <fullName>POP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>