force-app/main/default/objects/CSA_Inquiries__c/fields/Referring_Rep__c.field-meta.xml
<CustomField>
    <fullName>Referring_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CSA_Inquiries4</relationshipName>
    <type>Lookup</type>
</CustomField>