force-app/main/default/objects/CSA_Inquiries__c/fields/Report_Name__c.field-meta.xml
<CustomField>
    <fullName>Report_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Report Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>