force-app/main/default/objects/CSA_Inquiries__c/fields/Report_Status__c.field-meta.xml
<CustomField>
    <fullName>Report_Status__c</fullName>
    <label>Report Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NEW</fullName>
            </value>
            <value>
                <fullName>EXISTING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>