force-app/main/default/objects/CSA_Inquiries__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AICPA</fullName>
            </value>
            <value>
                <fullName>BANKS</fullName>
            </value>
            <value>
                <fullName>BONUS DISCREPANCY</fullName>
            </value>
            <value>
                <fullName>COMM/AUDIT - ** For Monthly Audit Use Only **</fullName>
            </value>
            <value>
                <fullName>COMMISSION SYSTEM ACCESS</fullName>
            </value>
            <value>
                <fullName>COMP PLANS</fullName>
            </value>
            <value>
                <fullName>CSA INITIATED</fullName>
            </value>
            <value>
                <fullName>DISTRICT CREDIT REASSIGNMENT</fullName>
                <label>REP TRANSFER_DIVISION/DISTRICT REASSIGNMENT</label>
            </value>
            <value>
                <fullName>INTERNAL REFERRALS</fullName>
            </value>
            <value>
                <fullName>RECOGNITION</fullName>
            </value>
            <value>
                <fullName>REFERRAL DISCREPANCY</fullName>
            </value>
            <value>
                <fullName>Referral Relations - 3rd Party</fullName>
            </value>
            <value>
                <fullName>SPLIT OPPORTUNITY</fullName>
            </value>
            <value>
                <fullName>TIER 1 PREVIOUS MONTH SALE</fullName>
            </value>
            <value>
                <fullName>TREO/IPHONE/WIRELESS CARD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>