force-app/main/default/objects/CSA_Inquiries__c/fields/Requestor_Role__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Role__c</fullName>
    <formula>CreatedBy.UserRole.Name</formula>
    <label>Requestor Role</label>
    <type>Text</type>
</CustomField>