force-app/main/default/objects/CSA_Inquiries__c/fields/Sales_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>