force-app/main/default/objects/CSA_Inquiries__c/fields/Sales_Rep_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Code__c</fullName>
    <formula>$User.Person_ID_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep Code</label>
    <type>Text</type>
</CustomField>