force-app/main/default/objects/CSA_Inquiries__c/fields/SOAR_Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>SOAR_Referral_Type__c</fullName>
    <label>SOAR Referral Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ancillary</fullName>
            </value>
            <value>
                <fullName>New Client</fullName>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>