force-app/main/default/objects/CSA_Inquiries__c/fields/Splitting_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Splitting_Rep_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Splitting Rep Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CSA_Inquiries9</relationshipName>
    <type>Lookup</type>
</CustomField>