force-app/main/default/objects/CSA_Inquiries__c/fields/Splitting_Rep_Name_Contact__c.field-meta.xml
<CustomField>
    <fullName>Splitting_Rep_Name_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Splitting Rep Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>contains</operation>
            <value>Paychex Inc SA</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CSA Inquiries (Splitting Rep Name)</relationshipLabel>
    <relationshipName>CSA_Inquiries1</relationshipName>
    <type>Lookup</type>
</CustomField>