force-app/main/default/objects/CSA_Inquiries__c/fields/Submitted_By_Zone__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_Zone__c</fullName>
    <formula>Submitted_By__r.Zone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submitted By Zone</label>
    <type>Text</type>
</CustomField>