force-app/main/default/objects/CSA_Inquiries__c/fields/Term_ed_Rep__c.field-meta.xml
<CustomField>
    <fullName>Term_ed_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, if Sales Rep is a Term&apos;ed Rep</description>
    <inlineHelpText>Check on if the Sales Rep is Terminated and enter Rep&apos;s name in Questions/Comments</inlineHelpText>
    <label>Termed Rep</label>
    <type>Checkbox</type>
</CustomField>