force-app/main/default/objects/CSA_Inquiries__c/fields/Tier_1_Bank__c.field-meta.xml
<CustomField>
    <fullName>Tier_1_Bank__c</fullName>
    <label>Tier 1 Bank</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Academy Bank</fullName>
            </value>
            <value>
                <fullName>Banco Do Brasil</fullName>
            </value>
            <value>
                <fullName>Banco Popular</fullName>
            </value>
            <value>
                <fullName>BANK OF AMERICA</fullName>
            </value>
            <value>
                <fullName>Bank of Colorado</fullName>
            </value>
            <value>
                <fullName>Bank of Rhode Island</fullName>
            </value>
            <value>
                <fullName>BANK OF THE WEST</fullName>
            </value>
            <value>
                <fullName>Barnett (conversion only)</fullName>
            </value>
            <value>
                <fullName>BMO</fullName>
            </value>
            <value>
                <fullName>California Bank &amp; Trust</fullName>
            </value>
            <value>
                <fullName>CenterState Bank</fullName>
            </value>
            <value>
                <fullName>Citibank</fullName>
            </value>
            <value>
                <fullName>CITIZENS</fullName>
            </value>
            <value>
                <fullName>Columbia Bank</fullName>
            </value>
            <value>
                <fullName>Fairwinds Credit Union</fullName>
            </value>
            <value>
                <fullName>First Alliance Bank</fullName>
            </value>
            <value>
                <fullName>First Bank</fullName>
            </value>
            <value>
                <fullName>First Citizen&apos;s National Bank</fullName>
            </value>
            <value>
                <fullName>First Horizon</fullName>
            </value>
            <value>
                <fullName>FirstMark</fullName>
            </value>
            <value>
                <fullName>FirstMerit Bank</fullName>
            </value>
            <value>
                <fullName>FIRST NATIONAL BANK OF OMAHA</fullName>
            </value>
            <value>
                <fullName>First Tennessee</fullName>
            </value>
            <value>
                <fullName>Flagstar</fullName>
            </value>
            <value>
                <fullName>Fleet Bank Small Business Pak (conversion only)</fullName>
            </value>
            <value>
                <fullName>GUARANTY/BEST BANK</fullName>
            </value>
            <value>
                <fullName>HomeStreet</fullName>
            </value>
            <value>
                <fullName>HSBC</fullName>
            </value>
            <value>
                <fullName>Klein Bank</fullName>
            </value>
            <value>
                <fullName>Local Bank without Tier II Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>