force-app/main/default/objects/CSA_Inquiries__c/fields/Tier_2_Bank__c.field-meta.xml
<CustomField>
    <fullName>Tier_2_Bank__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tier 2 Bank</label>
    <length>50</length>
    <type>Text</type>
</CustomField>