force-app/main/default/objects/CSA_Inquiries__c/fields/TRR__c.field-meta.xml
<CustomField>
    <fullName>TRR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TRR</label>
    <length>80</length>
    <type>Text</type>
</CustomField>