force-app/main/default/objects/CSA_Inquiries__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADVANTAGE</fullName>
            </value>
            <value>
                <fullName>ATF</fullName>
            </value>
            <value>
                <fullName>CORE ADVANCED ACQUISITION</fullName>
            </value>
            <value>
                <fullName>CORE ADVANCED PAYROLL</fullName>
            </value>
            <value>
                <fullName>MMS REFERRAL</fullName>
            </value>
            <value>
                <fullName>NEW PREMIER</fullName>
            </value>
            <value>
                <fullName>PBS REFERRAL</fullName>
            </value>
            <value>
                <fullName>SMALL BIZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>