force-app/main/default/objects/CSA_Inquiries__c/fields/Web_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Web_Request_Type__c</fullName>
    <label>Web Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADD A NEW PAGE</fullName>
            </value>
            <value>
                <fullName>ADD/UPDATE INFORMATION</fullName>
            </value>
            <value>
                <fullName>REMOVE INFORMATION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>