force-app/main/default/objects/CSA_Inquiries__c/fields/Zone_Number_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Zone_Number_Picklist__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Division__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
            <value>
                <fullName>17</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>19</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>32</fullName>
            </value>
            <value>
                <fullName>33</fullName>
            </value>
            <value>
                <fullName>34</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>37</fullName>
            </value>
            <value>
                <fullName>38</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>61</fullName>
            </value>
            <value>
                <fullName>62</fullName>
            </value>
            <value>
                <fullName>63</fullName>
            </value>
            <value>
                <fullName>64</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>