force-app/main/default/objects/CSA_Inquiries__c/validationRules/CSAInq_force_formatted_ClientNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>CSAInq_force_formatted_ClientNumber</fullName>
    <active>false</active>
    <description>The Client Number must be 4 or 8 numbers for records with Request Type = INTERNAL REFERRALS, SPLIT OPPORTUNITY, or COMM AUDIT</description>
    <errorConditionFormula>AND( 
OR(ISPICKVAL(Request_Type__c,&apos;INTERNAL REFERRALS&apos;),ISPICKVAL(Request_Type__c,&apos;SPLIT OPPORTUNITY&apos;),ISPICKVAL(Request_Type__c,&apos;COMM/AUDIT - ** For Monthly Audit Use Only **&apos;)), 
NOT( 
OR( REGEX( Client_Number__c , &quot;[A-Za-z0-9]{4}&quot;), 
REGEX( Client_Number__c , &quot;[A-Za-z0-9]{8}&quot;) ) 
) 
)</errorConditionFormula>
    <errorDisplayField>Action_Add_Modify__c</errorDisplayField>
    <errorMessage>Invalid Format - The Client Number must be 4 or 8 numbers, and cannot contain dashes, NPR or XXX</errorMessage>
</ValidationRule>