force-app/main/default/objects/CSA_Inquiries__c/validationRules/CSAInq_prevent_ProdStartDt_LT_120_days_a.validationRule-meta.xml
<ValidationRule>
    <fullName>CSAInq_prevent_ProdStartDt_LT_120_days_a</fullName>
    <active>true</active>
    <description>Prevent users from entering a Product Start Date value more than 60 days previous to the current date</description>
    <errorConditionFormula>AND( 
 ISPICKVAL(Request_Type__c, &apos;INTERNAL REFERRALS&apos;), 
 Product_Start_Date__c &lt; TODAY() - 120, 
 $Profile.Name &lt;&gt;&quot;System Administratorrrrrrr&quot; 
)</errorConditionFormula>
    <errorMessage>You cannot enter a Product Start Date value older than 120 days ago.</errorMessage>
</ValidationRule>