force-app/main/default/objects/CSA_Inquiries__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Case__c</columns>
    <columns>Case_Subject__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Tier_1_Bank__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>Request_Type__c</field>
        <operation>equals</operation>
        <value>BANKS</value>
    </filters>
    <label>All</label>
</ListView>