force-app/main/default/objects/CSA_Inquiries__c/listViews/All_Last_30_Days.listView-meta.xml
<ListView>
    <fullName>All_Last_30_Days</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Case_Subject__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Tier_1_Bank__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <filters>
        <field>Request_Type__c</field>
        <operation>equals</operation>
        <value>BANKS</value>
    </filters>
    <label>All - Last 30 Days</label>
</ListView>