force-app/main/default/objects/CSA_Inquiries__c/listViews/Banks.listView-meta.xml
<ListView>
    <fullName>Banks</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Qstion_Cment__c</columns>
    <columns>Tier_1_Bank__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Type__c</field>
        <operation>equals</operation>
        <value>BANKS</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Banks Request Type</label>
    <sharedTo>
        <role>SystemAdministrator</role>
    </sharedTo>
</ListView>